<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" >
    </item>
    <item
        android:id="@+id/action_connect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_connect" >
    </item>
    <item
        android:id="@+id/action_disconnect"
        android:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/action_disconnect" >
    </item>
    <item
        android:id="@+id/action_disabled"
        android:showAsAction="never"
        android:orderInCategory="100"
        android:enabled="false"
        android:title="@string/action_disabled" >
    </item>
    <item
        android:id="@+id/action_click"
        android:showAsAction="never"
        android:orderInCategory="100"
        android:onClick="action_click"
        android:title="@string/action_click" >
    </item>
    <item
        android:id="@+id/action_help"
        android:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/action_help" >
    </item>
</menu>